--- a/src/popup/auth-callback.html
+++ b/src/popup/auth-callback.html
@@ -8,16 +8,27 @@
         padding: 20px;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         text-align: center;
+        margin: 0;
+        background-color: #f9f9f9;
       }
+
+      .container {
+        background-color: white;
+        border-radius: 8px;
+        padding: 20px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+
       .spinner {
         width: 40px;
         height: 40px;
         margin: 20px auto;
-        border: 4px solid #f3f3f3;
-        border-top: 4px solid #3498db;
+        border: 3px solid #f3f3f3;
+        border-top: 3px solid #3498db;
         border-radius: 50%;
         animation: spin 1s linear infinite;
       }
+
       @keyframes spin {
         0% {
           transform: rotate(0deg);
@@ -26,55 +37,36 @@
           transform: rotate(360deg);
         }
       }
-      .error {
-        color: #e74c3c;
-        margin-top: 20px;
+
+      #status {
+        margin: 15px 0;
+        padding: 10px;
+        border-radius: 4px;
+        transition: all 0.3s ease;
       }
+
+      .info {
+        color: #2196f3;
+        background-color: #e3f2fd;
+      }
+
+      .error {
+        color: #d32f2f;
+        background-color: #ffebee;
+      }
+
       .success {
-        color: #2ecc71;
-        margin-top: 20px;
+        color: #388e3c;
+        background-color: #e8f5e9;
       }
     </style>
-    <script type="module">
-      import { authService } from "../utils/authService.js";
-
-      async function handleAuthCallback() {
-        try {
-          const hash = window.location.hash;
-          if (!hash) {
-            throw new Error("No authentication data received");
-          }
-
-          // Show loading state
-          document.getElementById("status").textContent = "Completing authentication...";
-          document.getElementById("spinner").style.display = "block";
-
-          // Handle the callback
-          await authService.handleCallback(hash);
-
-          // Show success message
-          document.getElementById("status").textContent = "Authentication successful!";
-          document.getElementById("status").className = "success";
-          document.getElementById("spinner").style.display = "none";
-
-          // Close the window after a short delay
-          setTimeout(() => {
-            window.close();
-          }, 1500);
-        } catch (error) {
-          console.error("Auth callback error:", error);
-          document.getElementById("status").textContent = "Authentication failed. Please try again.";
-          document.getElementById("status").className = "error";
-          document.getElementById("spinner").style.display = "none";
-        }
-      }
-
-      // Initialize when the page loads
-      window.addEventListener("load", handleAuthCallback);
-    </script>
   </head>
   <body>
-    <div id="spinner" class="spinner"></div>
-    <p id="status">Initializing authentication...</p>
+    <div class="container">
+      <div id="spinner" class="spinner"></div>
+      <p id="status" class="info">Initializing authentication...</p>
+    </div>
+    <!-- The bundled script will be injected by webpack -->
+    <script src="../authCallback.js"></script>
   </body>
 </html>
