--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,146 +1,77 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toxic Food Filter</title>
-    <style>
-      body {
-        width: 300px;
-        padding: 15px;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      }
-
-      .header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 15px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #eee;
-      }
-
-      .title {
-        margin: 0;
-        color: #2c3e50;
-        font-size: 16px;
-      }
-
-      .status {
-        font-size: 12px;
-        padding: 4px 8px;
-        border-radius: 12px;
-        background-color: #2ecc71;
-        color: white;
-      }
-
-      .quick-settings {
-        margin-bottom: 15px;
-      }
-
-      .setting-row {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 10px;
-      }
-
-      label {
-        font-size: 14px;
-        color: #34495e;
-      }
-
-      select {
-        padding: 4px 8px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        font-size: 12px;
-      }
-
-      .stats {
-        background-color: #f8f9fa;
-        padding: 10px;
-        border-radius: 4px;
-        margin-bottom: 15px;
-      }
-
-      .stat-row {
-        display: flex;
-        justify-content: space-between;
-        font-size: 12px;
-        color: #7f8c8d;
-        margin-bottom: 5px;
-      }
-
-      .buttons {
-        display: flex;
-        gap: 10px;
-      }
-
-      button {
-        flex: 1;
-        padding: 8px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 12px;
-        transition: background-color 0.2s;
-      }
-
-      .settings-button {
-        background-color: #3498db;
-        color: white;
-      }
-
-      .settings-button:hover {
-        background-color: #2980b9;
-      }
-
-      .upgrade-button {
-        background-color: #f1c40f;
-        color: #34495e;
-      }
-
-      .upgrade-button:hover {
-        background-color: #f39c12;
-      }
-    </style>
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <div class="header">
-      <h1 class="title">Toxic Food Filter</h1>
-      <span class="status">Active</span>
-    </div>
+    <div class="popup-container">
+      <!-- Auth Status Section -->
+      <div id="auth-status" class="auth-status">
+        <!-- Logged Out View -->
+        <div id="logged-out-view" class="view">
+          <h2>Welcome to Toxic Food Filter</h2>
 
-    <div class="quick-settings">
-      <div class="setting-row">
-        <label>Filter Strictness:</label>
-        <select id="strictnessLevel">
-          <option value="strict">Strict</option>
-          <option value="moderate" selected>Moderate</option>
-          <option value="lenient">Lenient</option>
-        </select>
+          <!-- Auth Tabs -->
+          <div class="auth-tabs">
+            <button type="button" class="tab-btn active" data-tab="login">Login</button>
+            <button type="button" class="tab-btn" data-tab="signup">Sign Up</button>
+          </div>
+
+          <!-- Login Form -->
+          <form id="login-form" class="auth-form">
+            <div class="form-group">
+              <label for="login-email">Email</label>
+              <input type="email" id="login-email" required />
+            </div>
+            <div class="form-group">
+              <label for="login-password">Password</label>
+              <input type="password" id="login-password" required />
+            </div>
+            <button type="submit" class="btn-primary">Login</button>
+            <div id="login-error" class="error-message"></div>
+          </form>
+
+          <!-- Sign Up Form -->
+          <form id="signup-form" class="auth-form hidden">
+            <div class="form-group">
+              <label for="signup-email">Email</label>
+              <input type="email" id="signup-email" required />
+            </div>
+            <div class="form-group">
+              <label for="signup-password">Password</label>
+              <input type="password" id="signup-password" required minlength="6" />
+            </div>
+            <div class="form-group">
+              <label for="signup-confirm-password">Confirm Password</label>
+              <input type="password" id="signup-confirm-password" required minlength="6" />
+            </div>
+            <button type="submit" class="btn-primary">Sign Up</button>
+            <div id="signup-error" class="error-message"></div>
+          </form>
+        </div>
+
+        <!-- Logged In View -->
+        <div id="logged-in-view" class="view hidden">
+          <div class="user-info">
+            <h3>Welcome back!</h3>
+            <p id="user-email"></p>
+            <div class="subscription-status">
+              <p>Subscription Status: <span id="sub-status">Free</span></p>
+            </div>
+          </div>
+          <button id="logout-btn" class="btn-secondary">Logout</button>
+        </div>
+      </div>
+
+      <!-- Loading Spinner -->
+      <div id="loading-spinner" class="loading-spinner hidden">
+        <div class="spinner"></div>
       </div>
     </div>
-
-    <div class="stats">
-      <div class="stat-row">
-        <span>Products Scanned Today:</span>
-        <span id="scannedCount">0</span>
-      </div>
-      <div class="stat-row">
-        <span>Toxic Ingredients Found:</span>
-        <span id="toxicCount">0</span>
-      </div>
-      <div class="stat-row">
-        <span>Custom Ingredients:</span>
-        <span id="customCount">0/3</span>
-      </div>
-    </div>
-
-    <div class="buttons">
-      <button class="settings-button" id="openSettings">Settings</button>
-      <button class="upgrade-button" id="upgradePremium">Upgrade to Premium</button>
-    </div>
-
-    <script src="popup.js"></script>
+    <!-- webpack is throwing popup.js into the src/ directory and keeping html in the src/popup directory.  -->
+    <script src="../popup.js"></script>
   </body>
 </html>
