updated to check db subscriptions

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -64,30 +64,18 @@
           </div>
         </div>
 
-        <!-- Subscription Tiers -->
+        <!-- Basic Tier Only -->
         <div class="subscription-tiers">
           <div class="tier-card" id="basic-tier">
-            <h4>Basic</h4>
+            <h4>Basic Plan</h4>
             <div class="price">$1.99/month</div>
             <ul class="features">
-              <li>Basic ingredient scanning</li>
+              <li>Ingredient scanning</li>
               <li>Default ingredients database</li>
               <li>Basic allergen alerts</li>
+              <li>Real-time analysis</li>
             </ul>
-            <button class="tier-btn" data-tier="basic">Select Basic</button>
-          </div>
-
-          <div class="tier-card premium" id="pro-tier">
-            <div class="premium-badge">Most Popular</div>
-            <h4>Pro</h4>
-            <div class="price">$3.99/month</div>
-            <ul class="features">
-              <li>Advanced ingredient scanning</li>
-              <li>Custom ingredients lists</li>
-              <li>Detailed health insights</li>
-              <li>Priority support</li>
-            </ul>
-            <button class="tier-btn" data-tier="pro">Upgrade to Pro</button>
+            <button class="tier-btn" data-tier="basic">Get Started</button>
           </div>
         </div>
       </div>
