--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -6,86 +6,78 @@
   </head>
   <body>
     <div class="popup-container">
+      <div class="popup-header">
+        <h1>Toxic Food Filter</h1>
+        <p>Make healthier food choices</p>
+      </div>
       <!-- Auth Section -->
       <div id="auth-section">
-        <div id="auth-status" class="status-section">
-          <!-- Logged Out View -->
-          <div id="logged-out" class="auth-state">
-            <div id="auth-tabs">
-              <button class="tab-btn active" data-tab="login">Sign In</button>
-              <button class="tab-btn" data-tab="signup">Create Account</button>
+        <!-- Logged Out View -->
+        <div id="logged-out" class="auth-state">
+          <div id="auth-tabs">
+            <button class="tab-btn active" data-tab="login">Sign In</button>
+            <button class="tab-btn" data-tab="signup">Create Account</button>
+          </div>
+
+          <!-- Login Form -->
+          <form id="login-form" class="auth-form">
+            <div class="form-group">
+              <input type="email" id="login-email" placeholder="Email" required />
+            </div>
+            <div class="form-group">
+              <input type="password" id="login-password" placeholder="Password" required />
+            </div>
+            <button type="submit" class="primary-btn">Sign In</button>
+            <div class="auth-error hidden"></div>
+          </form>
+
+          <!-- Signup Form -->
+          <form id="signup-form" class="auth-form hidden">
+            <div class="form-group">
+              <input type="email" id="signup-email" placeholder="Email" required />
+            </div>
+            <div class="form-group">
+              <input type="password" id="signup-password" placeholder="Password" required />
+              <div class="password-requirements">Password must be at least 6 characters</div>
+            </div>
+            <button type="submit" class="primary-btn">Create Account</button>
+            <div class="auth-error hidden"></div>
+          </form>
+        </div>
+
+        <!-- Logged In View -->
+        <div id="logged-in" class="auth-state hidden">
+          <div class="content-wrapper">
+            <!-- Ingredients Section -->
+            <div id="ingredients-section">
+              <div class="section-header">
+                <h3>Protected Against</h3>
+                <p class="section-description">We scan for these harmful ingredients</p>
+              </div>
+              <div class="ingredients-list">
+                <div class="ingredients-category">
+                  <h4>High Concern</h4>
+                  <div id="high-concern-ingredients"></div>
+                </div>
+                <div class="ingredients-category">
+                  <h4>Moderate Concern</h4>
+                  <div id="moderate-concern-ingredients"></div>
+                </div>
+              </div>
             </div>
 
-            <!-- Login Form -->
-            <form id="login-form" class="auth-form">
-              <div class="form-group">
-                <input type="email" id="login-email" placeholder="Email" required />
+            <!-- Subscription Section -->
+            <div class="subscription-status">
+              <h3>Your Subscription</h3>
+              <div id="current-plan" class="plan-badge">
+                <span id="plan-name">Basic</span>
+                <span id="plan-price">$1.99/month</span>
               </div>
-              <div class="form-group">
-                <input type="password" id="login-password" placeholder="Password" required />
-              </div>
-              <button type="submit" class="primary-btn">Sign In</button>
-              <div class="auth-error hidden"></div>
-            </form>
-
-            <!-- Signup Form -->
-            <form id="signup-form" class="auth-form hidden">
-              <div class="form-group">
-                <input type="email" id="signup-email" placeholder="Email" required />
-              </div>
-              <div class="form-group">
-                <input type="password" id="signup-password" placeholder="Password" required />
-                <div class="password-requirements">Password must be at least 6 characters</div>
-              </div>
-              <button type="submit" class="primary-btn">Create Account</button>
-              <div class="auth-error hidden"></div>
-            </form>
-          </div>
-
-          <!-- Logged In View -->
-          <div id="logged-in" class="auth-state hidden">
-            <span id="user-email"></span>
-            <button id="logout-btn" class="text-btn">Sign Out</button>
+              <button id="manage-subscription" class="primary-btn">Manage Subscription</button>
+              <button id="logout-btn" class="text-btn">Sign Out</button>
+            </div>
           </div>
         </div>
-      </div>
-
-      <!-- Subscription Section -->
-      <div id="subscription-section" class="hidden">
-        <div class="subscription-status">
-          <h3>Your Subscription</h3>
-          <div id="current-plan" class="plan-badge">
-            <span id="plan-name">Basic</span>
-            <span id="plan-price">$1.99/month</span>
-          </div>
-          <div class="subscription-info">
-            <div id="subscription-expiry"></div>
-            <div id="subscription-features"></div>
-          </div>
-        </div>
-
-        <!-- Basic Tier Only -->
-        <div class="subscription-tiers">
-          <div class="tier-card" id="basic-tier">
-            <h4>Basic Plan</h4>
-            <div class="price">$1.99/month</div>
-            <ul class="features">
-              <li>Ingredient scanning</li>
-              <li>Default ingredients database</li>
-              <li>Basic allergen alerts</li>
-              <li>Real-time analysis</li>
-            </ul>
-            <button class="tier-btn" data-tier="basic">Get Started</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Settings Link -->
-      <div class="footer">
-        <button id="settings-btn" class="icon-btn">
-          <span class="settings-icon">&#9881;</span>
-          Settings
-        </button>
       </div>
     </div>
     <script src="../popup.js"></script>
