--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Toxic Food Filter</title>
+    <title>Toxin Filter</title>
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <div class="popup-container">
       <div class="popup-header">
-        <h1>Toxic Food Filter</h1>
+        <h1>Toxin Filter</h1>
         <p>Make healthier food choices</p>
       </div>
       <!-- Auth Section -->
@@ -38,7 +38,7 @@
             </div>
             <div class="form-group">
               <input type="password" id="signup-password" placeholder="Password" required />
-              <div class="password-requirements">Password must be at least 6 characters</div>
+              <div class="password-requirements">Password must be at least 8 characters</div>
             </div>
             <button type="submit" class="primary-btn">Create Account</button>
             <div class="auth-error hidden"></div>
