added way for users to subscribe

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,6 +10,12 @@
         <h1>Toxin Filter</h1>
         <p>Make healthier food choices</p>
       </div>
+
+      <!-- Upgrade Banner -->
+      <div id="upgrade-banner" class="upgrade-banner hidden">
+        <p>Get real-time ingredient scanning for only $1.99/month</p>
+        <button id="get-started-btn" class="primary-btn">Get Started</button>
+      </div>
       <!-- Auth Section -->
       <div id="auth-section">
         <!-- Logged Out View -->
