removed toxin word from customer facing parts

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Toxin Filter</title>
+    <title>Clean Cart</title>
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <div class="popup-container">
       <div class="popup-header">
-        <h1>Toxin Filter</h1>
+        <h1>Clean Cart</h1>
         <p>Make healthier food choices</p>
       </div>
 
