added a way to reopen the onboarding

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -80,6 +80,7 @@
                 <span id="plan-price">$1.99/month</span>
               </div>
               <button id="manage-subscription" class="primary-btn">Manage Subscription</button>
+              <button id="show-guide-btn" class="secondary-btn">How It Works</button>
               <button id="logout-btn" class="text-btn">Sign Out</button>
             </div>
           </div>
