added some icons for extension, handles free trials, added dev webhook

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -9,11 +9,12 @@
       <div class="popup-header">
         <h1>Clean Cart</h1>
         <p>Make healthier food choices</p>
+        <a href="https://www.getcleancart.com/#contact" target="_blank" class="contact-link">Contact Us</a>
       </div>
 
       <!-- Upgrade Banner -->
       <div id="upgrade-banner" class="upgrade-banner hidden">
-        <p>Get real-time ingredient scanning for only $1.99/month</p>
+        <p>Get real-time ingredient scanning for only $3.99/month</p>
         <button id="get-started-btn" class="primary-btn">Get Started</button>
       </div>
       <!-- Auth Section -->
@@ -77,7 +78,7 @@
               <h3>Your Subscription</h3>
               <div id="current-plan" class="plan-badge">
                 <span id="plan-name">Basic</span>
-                <span id="plan-price">$1.99/month</span>
+                <span id="plan-price">$3.99/month</span>
               </div>
               <button id="manage-subscription" class="primary-btn">Manage Subscription</button>
               <button id="show-guide-btn" class="secondary-btn">How It Works</button>
